fix: resolve some artefacts on mobile layouts

--- a/src/styles/blocks/_header.scss
+++ b/src/styles/blocks/_header.scss
@@ -149,7 +149,7 @@
 
     &__link {
       margin: 48px auto 20px;
-      width: calc(240px + (100vw - 320px) * (260 - 240) / (555 - 320));
+      width: 100%;
     }
   }
 }
