--- a/src/styles/blocks/_images.scss
+++ b/src/styles/blocks/_images.scss
@@ -22,7 +22,7 @@
     padding-top: calc(40px + (100vw - 768px) * (90 - 40) / (1439 - 768));
     padding-bottom: calc(38px + (100vw - 768px) * (96 - 38) / (1439 - 768));
     gap: calc(15px + (100vw - 768px) * (25 - 10) / (1439 - 768));
-    
+
     &__image {
       max-width: calc(226px + ((100vw - 768px) * (350 - 226) / (1439 - 768)));
     }
@@ -31,6 +31,8 @@
 
 @media screen and (max-width: 767px) {
   .images {
+    justify-content: center;
+
     &__image {
       padding-top: calc(30px + (100vw - 320px) * (40 - 30) / (767 - 320));
       max-width: 260px;
